--- a/src/datasets/MD_PO_HIST/pbt_aspects.yml
+++ b/src/datasets/MD_PO_HIST/pbt_aspects.yml
@@ -25,14 +25,14 @@ schema:
       tags: []
   - name: EV_TYPE_CO
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PO_SEQ_NBR
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
@@ -46,14 +46,14 @@ schema:
       tags: []
   - name: MATL_MVMT_NUM
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: MATL_MVMT_SEQ_NBR
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
@@ -108,518 +108,539 @@ schema:
       mappings: []
       tags: []
   - name: MVMT_TYPE
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY_IN_PRCH_ORDR_PRC_UNIT
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: AMT_IN_LCL_CRNCY1
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CRNCY_KEY
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: GR_IR_ACCT_CLRNG_VAL_IN_LCL_CRNCY
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: GOODS_RCPT_BLOK_STK_IN_OU
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY_IN_GR_BLOK_STK
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DEBIT_OR_CREDIT_IN
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: VALUT_TYPE
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DELV_CMPLT_IN
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: REF_DOC_NUM
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: FISC_YR_OF_A_REF_DOC
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DOC_NUM_OF_A_REF_DOC
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: ITM_OF_A_REF_DOC
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: RSN_FOR_MVMT
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: ACTG_DOC_ENT_DTTM
-    type: void
+    type: timestamp
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: INVC_VAL_ENT
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CMPLI_WTH_SHIPPING_INSTR
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: INVC_VAL_IN_FRGN_CRNCY
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: RVSL_OF_GR_ALLW
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SEQ_NUM_OF_SUP_CNFRM
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: TAX_ON_SLS_PRCH_CD
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: TAX_RPTG_CTRY_REGN
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY_IN_UOM_FROM_DELV_NOTE
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: UOM_FROM_DELV_NOTE
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: MATL_NUM
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CLRNG_VAL_ON_GR_IR_CLRNG_ACCT
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: LCL_CRNCY_KEY
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY1
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: BTCH_NUM
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DOC_DTTM
-    type: void
+    type: timestamp
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CALC_OF_VAL_OPEN
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: UNPLAN_ACCT_ASGNMT
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: NM_OF_PRSN_RESP_FOR_CREAT_OBJ
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CHAR_VAL_1
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CHAR_VAL_2
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CHAR_VAL_3
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY3
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: FSHN_Theme
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: FSHN_CLCT
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SEASN
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SEASN_YR
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DPRE_CMPLT_FL
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: VAL_GOODS_RCPT_BLOK_STK
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: TYPE_OF_PAREL_UNIT_OF_MEAS
-    type: void
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: GOODS_RCPT_BLOK_STK
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY_IN_PAREL_UNIT_OF_MEAS
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PCDR_FOR_UPDT_SCHED_LINE_QTY
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: LOGL_SYS
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: UOM_FROM_SRVC_ENT_SHT
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: STK_SGMNT
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DELV_ITM
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DELV
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: ORIG_OF_AN_INVC_ITM
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: EXCH_RT
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: MLT_ACCT_ASGNMT
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PSTD_SCTY_RETN_AMT
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PSTD_RETN_AMT_IN_DOC_CRNCY
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: RETN_AMT_IN_CO_CD_CRNCY
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: RETN_AMT_IN_DOC_CRNCY
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: EXCH_RT_DIFF_AMT
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: GR_IR_ACCT_CLRNG_VAL_LCL_CRNCY
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: ACC_AT_ORIG
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY_IN_VALUT_GR_BLOK_STK
-    type: void
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: VALUT_GOODS_RCPT_BLOK_STK
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: AMT_IN_DOC_CRNCY
-    type: void
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: AMT_IN_LCL_CRNCY
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY_IN_PO_PRC_UNIT
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY2
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SAP_RLSE
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: INVC_AMT_IN_PO_CRNCY
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CLRNG_VAL_ON_GR_IR_ACCT
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: RTRN_IN
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: NUM_OF_PO_ACCT_ASGNMT
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: LINE_NUM_OF_SRVC
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PKG_NUM_OF_SRVC
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SRVC_NUM
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -655,7 +676,14 @@ schema:
       tags: []
   - name: DAI_ETL_ID
     type: integer
-    nullable: true
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _deleted_
+    type: string
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -667,16 +695,16 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: DAI_UPDT_DTTM
-    type: timestamp
-    nullable: false
+  - name: NUM_OF_THE_DOC_COND
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: NUM_OF_THE_DOC_COND
-    type: void
-    nullable: true
+  - name: DAI_UPDT_DTTM
+    type: timestamp
+    nullable: false
     metadata:
       description: ''
       mappings: []
