--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -365,7 +365,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-05 13:55:00'
+    modifiedAt: '2023-05-05 14:03:18'
     datasets:
       inputs: []
       outputs:
@@ -388,14 +388,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_DELV_2:
-    name: MD_DELV_2_fsn
+    name: SAP_MD_DELV_FSN
     description: Mapping pipeline  ['fsn']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-04-27 04:27:30'
+    modifiedAt: '2023-05-05 14:08:18'
     datasets:
       inputs: []
       outputs:
