--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -403,14 +403,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_DELV_3:
-    name: MD_DELV_3_bwi
+    name: SAP_MD_DELV_BWI
     description: Mapping pipeline  ['bwi']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-04-27 04:28:06'
+    modifiedAt: '2023-05-05 14:14:24'
     datasets:
       inputs: []
       outputs:
