--- a/src/datasets/MD_PRCH_INFO_ORG/pbt_aspects.yml
+++ b/src/datasets/MD_PRCH_INFO_ORG/pbt_aspects.yml
@@ -177,6 +177,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: _deleted_
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _pk_
     type: string
     nullable: true
@@ -214,13 +221,6 @@ schema:
       tags: []
   - name: DAI_UPDT_DTTM
     type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _deleted_
-    type: string
     nullable: false
     metadata:
       description: ''
